# scraping_listings

./: LICENSE  README.md  analyze_artifacts.ipynb  config.yaml  pyproject.toml
.github/workflows/: scrape-fincaraiz.yml  scrape-metrocuadrado.yml
analysis/: filtered_listings.csv
app/: __init__.py  main.py
app/models/: scraper.py
app/scrapers/: __init__.py  base.py  playwright_scraper.py  scrapy_scraper.py
app/scripts/: __init__.py  filter_and_notify.py
app/services/: data_saver.py  yaml_loader.py
app/utils/: STRUCTURE.md  __init__.py  shadow_dom_utils.py
data/: .gitkeep  fincaraiz-bogota-leasing_details_20251016_215412.csv  fincaraiz-bogota-leasing_details_20251016_222009.csv  fincaraiz-bogota-leasing_details_20251017_001613.csv  fincaraiz-bogota-leasing_details_20251017_060743.csv  fincaraiz-bogota-leasing_details_20251017_120638.csv  fincaraiz-bogota-leasing_details_20251017_180610.csv  fincaraiz-bogota-leasing_details_20251018_001430.csv  fincaraiz-bogota-leasing_details_20251018_060650.csv  fincaraiz-bogota-leasing_details_20251018_120752.csv  fincaraiz-bogota-leasing_details_20251018_180445.csv  fincaraiz-bogota-leasing_details_20251019_001719.csv  fincaraiz-bogota-leasing_details_20251019_060700.csv  fincaraiz-bogota-leasing_details_20251019_120716.csv  fincaraiz-bogota-leasing_details_20251019_180600.csv  fincaraiz-bogota-leasing_details_20251020_001734.csv  fincaraiz-bogota-leasing_details_20251020_060727.csv  fincaraiz-bogota-leasing_details_20251020_120650.csv  fincaraiz-bogota-leasing_details_20251020_180725.csv  fincaraiz-bogota-leasing_details_20251021_001651.csv  fincaraiz-bogota-leasing_details_20251021_060808.csv  fincaraiz-bogota-leasing_details_20251021_120709.csv  fincaraiz-bogota-leasing_details_20251021_180531.csv  fincaraiz-bogota-leasing_details_20251022_001607.csv  fincaraiz-bogota-leasing_details_20251022_060756.csv  fincaraiz-bogota-leasing_details_20251022_120726.csv  fincaraiz-bogota-leasing_details_20251022_180832.csv  fincaraiz-bogota-leasing_details_20251023_001550.csv  fincaraiz-bogota-leasing_details_20251023_060802.csv  fincaraiz-bogota-leasing_details_20251023_120838.csv  fincaraiz-bogota-leasing_details_20251023_180614.csv  fincaraiz-bogota-leasing_details_20251024_001423.csv  fincaraiz-bogota-leasing_details_20251024_060750.csv  fincaraiz-bogota-leasing_details_20251024_120733.csv  fincaraiz-bogota-leasing_details_20251024_180600.csv  fincaraiz-bogota-leasing_details_20251025_001410.csv  fincaraiz-bogota-leasing_details_20251025_060729.csv  fincaraiz-bogota-leasing_details_20251025_120732.csv  fincaraiz-bogota-leasing_details_20251025_180642.csv  fincaraiz-bogota-leasing_details_20251026_001546.csv  (+3892 more)
